[package]
name = "gateway-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
auth = { path = "../auth" }
config = { path = "../config" }
rate-limiter = { path = "../rate-limiter" }
error-handler = { path = "../error-handler" }
request-validator = { path = "../request-validator" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
thiserror = "1.0"